updated course endpoint
